--- a/LIVE/request.css
+++ b/LIVE/request.css
@@ -12,7 +12,7 @@ body{
 .FULL_WINDOW{
     width: 100%;
     height: 100%;
-    background-color: aliceblue;
+    background-color: #EAEEF2;
 }
 .TOP_SPACER {
     height: 35%;
@@ -79,4 +79,48 @@ body{
 
 .BOT_SPACER {
     height: 20px;
+}
+
+.SEARCH_RESULT {
+    min-height: 100px;
+    margin-left: 45px;
+    padding-left: 5px;
+    margin-right: 50px;
+    border-top: 1px solid gray; 
+    position: relative;
+}
+
+.SEARCH_RESULT:hover{
+    border: 1px solid gray;
+    min-height: 100px;
+    margin-left: 44px;
+    padding-left: 5px;
+    margin-right: 50px;
+    border-top: 1px solid gray; 
+    position: relative;
+}
+
+.SEARCH_RESULT_TITLE {
+    min-height: 16px;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 16px;
+    color: darkblue;
+    font-weight: 600;
+}
+
+.SEARCH_RESULT_DESC {
+    padding-top: 5px;
+    min-height: 70px;
+    font-family: fantasy
+}
+
+span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    
+    z-index: 1;
+    background-image: url('empty.gif');
 }
